minio/minio-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-web
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 33000 # یا هر پورت دیگری که بخواهی
  type: NodePort
