minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio  # اضافه کردن namespace
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 31000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service-web
  namespace: minio  # اضافه کردن namespace
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 34749
      targetPort: 34749
      nodePort: 32000
  type: NodePort
